// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<article
  class="Spinner"
>
  <ul
    class="SpinnerWheels SpinnerWheels--waiting"
  >
    
    <spinner-wheel-stub
      isspinning="true"
      name="color"
      tickduration="200ms"
      value="red"
    />
    <spinner-wheel-stub
      isspinning="true"
      name="shape"
      tickduration="200ms"
      value="round"
    />
    <spinner-wheel-stub
      isspinning="false"
      name="feeling"
      tickduration="200ms"
      value="sad"
    />
    
  </ul>
  <button
    class="SpinnerLever"
  >
    Click to Spin!
  </button>
</article>
`;

exports[` 2`] = `
<article
  class="Spinner"
>
  <ul
    class="SpinnerWheels SpinnerWheels--waiting"
  >
    
    <spinner-wheel-stub
      isspinning="true"
      name="color"
      tickduration="200ms"
      value="red"
    />
    <spinner-wheel-stub
      isspinning="true"
      name="shape"
      tickduration="200ms"
      value="round"
    />
    <spinner-wheel-stub
      isspinning="false"
      name="feeling"
      tickduration="200ms"
      value="sad"
    />
    
  </ul>
  <button
    class="SpinnerLever"
    disabled=""
  >
    Spinning...
  </button>
</article>
`;
